[package]
name = "hashmap-cuda"
version = "0.1.0"
authors = [
  "Maia Duschatzky",
  "Michael McCarthy",
  "Joseph R. Quinn <quinn.josephr@protonmail.com>"
]
edition = "2018"
homepage = "https://github.com/quinnjr/hashmap-cuda"
license = "ISC"
exclude = [ "project/" ]

[dependencies]
ahash = { version = "0.2.18", optional = true }
cuda-sys = "0.2.0"
failure = "0.1.6"

[features]
default = ["std"]
std = []
no-std = ["ahash"]

[dev-dependencies]
rand = "0.7.2"
