[package]
name = "hashmap-cuda"
version = "0.1.0-pre.1"
description = "A reimplementation of `std::collections::HashMap` using CUDA for parallelization."
authors = [
  "Maia Duschatzky",
  "Michael McCarthy",
  "Joseph R. Quinn <quinn.josephr@protonmail.com>"
]
edition = "2018"
homepage = "https://github.com/quinnjr/hashmap-cuda"
license = "ISC"
keywords = [
  "hash", "hashmap", "data", "structure", "cuda", "parallel"
]
exclude = [ "project/", ".travis.yml", "ci/" ]
build = "build.rs"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["nightly", "std"]

[badges]
is-it-maintained-issue-resolution = { repository = "quinnjr/hashmap-cuda" }
maintenance = { status = "actively-developed" }

[dependencies]
cfg-if = "0.1.10"
compiler_builtins = { version = "0.1.2", optional = true }
failure = "0.1.6"
# bitmask = { version = "0.5.0", default-features = false }

[dependencies.ahash]
version = "0.2.18"
optional = true
default-features = false

[dependencies.alloc]
version = "1.0"
optional = true
package = "rustc-std-workspace-alloc"

[dependencies.core]
version = "1.0"
optional = true
package = "rustc-std-workspace-core"

[dependencies.cuda]
version = "0.4.0-pre.2"
features = [ "cuda_10_1" ]

# [dependencies.serde]
# version = "1.0.102"
# optional = true
# features = ["derive"]

[dev-dependencies]
clippy = "0.0.302"
rustc-hash = "1.0.1"
rand = "0.5.1"
lazy_static = "1.4.0"

[build-dependencies]
autocfg = "0.1.7"

[features]
default = ["ahash", "ahash-compile-time-rng"]
ahash-compile-time-rng = ["ahash/compile-time-rng"]
std = []
nightly = []
rustc-internal-api = []
rustc-dep-of-std = ["nightly", "core", "compiler_builtins", "alloc", "rustc-internal-api"]
