[package]
name = "cuda-playground"
version = "0.1.0"
authors = ["Joseph R. Quinn <quinn.josephr@protonmail.com>"]
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
compiler_builtins = { version = "0.1.21", optional = true }
failure = "0.1.6"
libc = "0.2.66"
lazy_static = "1.4.0"

[dependencies.cuda]
version = "0.4.0-pre.2"
features = [ "cuda_10_1" ]

[dependencies.core]
version = "1.0"
optional = true
package = "rustc-std-workspace-core"

[build-dependencies]
autocfg = "0.1.7"

[features]
default = []
rustc-dep-of-std = ["core", "compiler_builtins"]
